--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button class="btn-roll"><span>&#10226;</span>Roll dice</button>
             <button class="btn-hold"><span><b>&#9759;</b></span>Hold</button>
         </div>
-        
+        <img src="img/dice-5.png" alt="dice" class="dice"></img>
         <script src="js/script.js"></script>
     </body>
 </html>
